# omoikane-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  mkdocs.yml  omoikane.spec  pyproject.toml  requirements-dev.txt
.github/: FUNDING.yml
.github/workflows/: docs.yml  release.yml
docs/: architecture.md  commands.md  configuration.md  index.md  install.md  phase0-spike-report.md  phase2-tools-audit.md  quickstart.md
examples/todo-cli/: README.md  brief.md  criteria.json
examples/todo-cli/output/: README.md  pyproject.toml
examples/todo-cli/output/tests/: test_cli.py  test_models.py  test_storage.py  test_task_service.py
examples/todo-cli/output/todo/: __init__.py  __main__.py  cli.py  models.py  storage.py  task_service.py
omoikane/: __init__.py  __main__.py  _version.py
omoikane/cli/: main.py
omoikane/cli/commands/: approvals.py  delete.py  init.py  list.py  migrate.py  onboard.py  open.py  resume.py  self_update.py  start.py  supervisor.py
omoikane/config/: paths.py  settings.py  toml_writer.py
omoikane/core/: agents_registry.py  book.py  orchestrator.py  project_index.py  schemas.py  store.py  watchdog.py
omoikane/data/agents/agent-backend-engineer/: SKILL.md
omoikane/data/agents/agent-cto/: SKILL.md
omoikane/data/agents/agent-frontend-engineer/: SKILL.md
omoikane/data/agents/agent-manager/: SKILL.md
omoikane/data/agents/agent-ml-engineer/: SKILL.md
omoikane/data/agents/agent-product-analyst/: SKILL.md
omoikane/data/agents/agent-qa-reviewer/: SKILL.md
omoikane/data/agents/agent-security-engineer/: SKILL.md
omoikane/data/agents/orchestrator-protocol/: SKILL.md
omoikane/orchestrator/: cto_session.py  daemon.py  loop.py
omoikane/runtime/: activity_emitter.py  agent_run.py  injection.py  prompts.py
omoikane/supervisor/: install.py  tick.py
omoikane/tools/: __init__.py  handlers.py
omoikane/transport/: __init__.py  base.py  slack.py  stdout.py  telegram.py
omoikane/tui/widgets/: activity_pane.py  input_bar.py  status_bar.py
omoikane/update/: __init__.py  updater.py
spike/: 00_inspect_sdk.py  01_inspect_steer.py  02_sdk_smoke.py  spike_a_registry.md  spike_b_steer.md  spike_c_delegate.md  spike_d_visibility.md
src/omoikane/: __init__.py
src/omoikane/cli/: main.py  slash.py
src/omoikane/cli/commands/: approvals.py  init.py  inject.py  list.py  open.py  resume.py  start.py  status.py  stop.py  supervisor.py
src/omoikane/config/: paths.py
src/omoikane/core/: agents_registry.py  book.py  dashboard.py  execution.py  redact.py  schemas.py  watchdog.py
src/omoikane/data/: __init__.py
src/omoikane/orchestrator/: cto_session.py  loop.py
src/omoikane/runtime/: activity_emitter.py  agent_run.py  injection.py  prompts.py  role_toolsets.py
src/omoikane/supervisor/: tick.py
src/omoikane/tools/: __init__.py  audit.py  handlers.py  session.py
src/omoikane/transport/: base.py  slack.py
src/omoikane/tui/: app.py
src/omoikane/tui/widgets/: approvals_pane.py  criteria_pane.py  (+1 more)
tests/: conftest.py  test_activity_emitter.py  test_agent_manager_excluded.py  test_agent_run.py  test_approval_addendum.py  test_approval_escalation.py  test_audit_precedence.py  test_book.py  test_bootstrap.py  test_brief_driven_e2e.py  test_classifier.py  test_cto_session.py  test_daemon.py  test_dashboard.py  test_delegation.py  test_delete_command.py  test_execution.py  test_inbox_drainer.py  test_main_gate.py  test_migrate.py  test_onboard_command.py  test_orchestrator.py  test_origin_capture.py  test_phase.py  test_prepare_manager_handoff.py  test_project_index.py  test_redact.py  test_register_book_tools.py  test_registry.py  test_roadmap.py  test_role_toolsets.py  test_routing.py  test_runtime_prompts.py  test_satisfy_criterion.py  test_self_update_command.py  test_session.py  test_set_criteria.py  test_settings.py  test_slash_parser.py  test_specialist_context.py  (+14 more)
(+11 files in other folders)
