[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omoikane-cli"
version = "0.1.0"
description = "Autonomous agent team CLI/TUI orchestrator built on hermes-agent SDK."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "David Kulhanek" }]
keywords = ["agent", "orchestrator", "cli", "tui", "hermes-agent"]

dependencies = [
    # Phase 1 — core extraction has zero runtime deps (stdlib only).
    # SDK + later-phase deps live in extras until their phase lands.
]

[project.optional-dependencies]
runtime = [
    # Phase 2+: hermes-agent SDK driver
    "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git",
]
tui = [
    # Phase 5: textual TUI + filesystem watcher
    "textual>=0.80",
    "watchfiles>=0.21",
    "rich>=13.7",
]
transport = [
    # Phase 7: messaging adapters
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
all = [
    "omoikane-cli[runtime,tui,transport,dev]",
]

[project.scripts]
omoikane = "omoikane.cli.main:main"

[project.urls]
Repository = "https://github.com/davidkulh/omoikane"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["omoikane*"]

[tool.setuptools.package-data]
omoikane = [
    "data/agents/**/*.md",
    "data/*.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src/omoikane"]
